update extract process

--- a/scripts/cv_jd_extract.ipynb
+++ b/scripts/cv_jd_extract.ipynb
@@ -11,12 +11,13 @@
     "!pip install easyocr\n",
     "!pip install boto3\n",
     "!pip install transformers\n",
-    "!pip install pdf2image"
+    "!pip install pdf2image\n",
+    "!pip install langdetect"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 2,
    "metadata": {
     "metadata": {}
    },
@@ -29,22 +30,24 @@
     "import boto3\n",
     "import json\n",
     "import re\n",
-    "from botocore.exceptions import ClientError"
+    "from botocore.exceptions import ClientError\n",
+    "from langdetect.lang_detect_exception import LangDetectException\n",
+    "from langdetect import detect "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 3,
    "metadata": {
     "metadata": {}
    },
    "outputs": [],
    "source": [
-    "def ocr_doc(pdf_path):\n",
+    "def ocr_doc(path):\n",
     "    ocr_text = ''\n",
     "    reader = easyocr.Reader(ocr_langs)\n",
-    "    if pdf_path.endswith('.pdf'):\n",
-    "        images = convert_from_path(pdf_path)\n",
+    "    if path.endswith('.pdf'):\n",
+    "        images = convert_from_path(path)\n",
     "        ocr_result = []\n",
     "        for image in images:\n",
     "            ocr_result.extend(reader.readtext(np.array(image)))\n",
@@ -52,20 +55,18 @@
     "        ocr_result = reader.readtext(path)\n",
     "    for res in ocr_result:\n",
     "        ocr_text += res[1] + '\\n'\n",
-    "    return ocr_text.strip()\n",
-    "    "
+    "    return ocr_text.strip()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 4,
    "metadata": {
     "metadata": {}
    },
    "outputs": [],
    "source": [
-    "def extract_cv_info_with_bedrock(raw_txt):\n",
-    "    prompt = f\"\"\"\n",
+    "cv_prompt_template = f\"\"\"\n",
     "You are an expert at extracting structured information from unstructured text.\n",
     "Do not make up any information.\n",
     "Extract the following information from the resume text below:\n",
@@ -116,62 +117,10 @@
     "  \"projects\": [\"string\", \"string\", \"...\"],\n",
     "  \"references\": [\"string\", \"string\", \"...\"]\n",
     "}}\n",
-    "Here is the resume text: {raw_txt}\n",
+    "Here is the resume text:\n",
     "\"\"\"\n",
-    "    client = boto3.client('bedrock-runtime', region_name='ap-southeast-1')\n",
-    "    try:\n",
-    "      request = {\n",
-    "          \"modelId\": \"arn:aws:bedrock:ap-southeast-1:677020944766:inference-profile/apac.amazon.nova-lite-v1:0\",\n",
-    "          \"messages\": [\n",
-    "              {\n",
-    "                  \"role\": \"user\",\n",
-    "                  \"content\": [{\"text\": prompt}]\n",
-    "              }\n",
-    "          ],\n",
-    "          \"inferenceConfig\": {\n",
-    "              \"maxTokens\": 2000,\n",
-    "              \"temperature\": 0.1,\n",
-    "              \"topP\": 0.9\n",
-    "          }\n",
-    "      }\n",
     "\n",
-    "      # Gọi Converse API\n",
-    "      response = client.converse(\n",
-    "          modelId=request[\"modelId\"],\n",
-    "          messages=request[\"messages\"],\n",
-    "          inferenceConfig=request[\"inferenceConfig\"]\n",
-    "      )\n",
-    "\n",
-    "      # Lấy text response\n",
-    "      response_text = response[\"output\"][\"message\"][\"content\"][0][\"text\"].strip()\n",
-    "\n",
-    "      # Parse JSON từ response\n",
-    "      try:\n",
-    "          if response_text.startswith(\"```json\"):\n",
-    "              response_text = response_text.replace(\"```json\", \"\").strip()\n",
-    "          if response_text.endswith(\"```\"):\n",
-    "                response_text = response_text.rstrip(\"```\").strip()\n",
-    "          extracted_json = json.loads(response_text)\n",
-    "      except json.JSONDecodeError:\n",
-    "          extracted_json = {\"error\": \"Failed to parse JSON\"}\n",
-    "\n",
-    "      return extracted_json\n",
-    "\n",
-    "    except Exception as e:\n",
-    "      return {\"error\": f\"Bedrock invocation failed: {str(e)}\"}\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
-   "metadata": {
-    "metadata": {}
-   },
-   "outputs": [],
-   "source": [
-    "def extract_job_desc_info_with_bedrock(raw_txt):\n",
-    "    prompt = f\"\"\"\n",
+    "job_prompt_template = f\"\"\"\n",
     "You are an expert at extracting structured information from unstructured text.\n",
     "Do not make up any information.\n",
     "Extract the following information from the job description text below:\n",
@@ -207,54 +156,138 @@
     "  \"required_certifications\": [\"string\", \"string\", \"...\"],\n",
     "  \"preferred_languages\": [\"string\", \"string\", \"...\"]\n",
     "}}\n",
-    "Here is the job description text: {raw_txt}\n",
-    "\"\"\"\n",
-    "    client = boto3.client('bedrock-runtime', region_name='ap-southeast-1')\n",
-    "    try:\n",
-    "      request = {\n",
-    "          \"modelId\": \"arn:aws:bedrock:ap-southeast-1:677020944766:inference-profile/apac.amazon.nova-lite-v1:0\",\n",
-    "          \"messages\": [\n",
-    "              {\n",
-    "                  \"role\": \"user\",\n",
-    "                  \"content\": [{\"text\": prompt}]\n",
-    "              }\n",
-    "          ],\n",
-    "          \"inferenceConfig\": {\n",
-    "              \"maxTokens\": 2000,\n",
-    "              \"temperature\": 0.1,\n",
-    "              \"topP\": 0.9\n",
-    "          }\n",
-    "      }\n",
-    "\n",
-    "      # Gọi Converse API\n",
-    "      response = client.converse(\n",
-    "          modelId=request[\"modelId\"],\n",
-    "          messages=request[\"messages\"],\n",
-    "          inferenceConfig=request[\"inferenceConfig\"]\n",
-    "      )\n",
-    "\n",
-    "      # Lấy text response\n",
-    "      response_text = response[\"output\"][\"message\"][\"content\"][0][\"text\"].strip()\n",
-    "\n",
-    "      # Parse JSON từ response\n",
-    "      try:\n",
-    "          if response_text.startswith(\"```json\"):\n",
-    "              response_text = response_text.replace(\"```json\", \"\").strip()\n",
-    "          if response_text.endswith(\"```\"):\n",
-    "              response_text = response_text.rstrip(\"```\").strip()\n",
-    "          extracted_json = json.loads(response_text)\n",
-    "      except json.JSONDecodeError:\n",
-    "          extracted_json = {\"error\": \"Failed to parse JSON\"}\n",
-    "\n",
-    "      return extracted_json\n",
-    "\n",
-    "    except Exception as e:\n",
-    "      return {\"error\": f\"Bedrock invocation failed: {str(e)}\"}"
+    "Here is the job description text:\n",
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 13,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [],
+   "source": [
+    "def extract_info_with_bedrock(raw_txt, prompt_template, model_arn=None, region_name='ap-southeast-1'):\n",
+    "    \"\"\"\n",
+    "    Hàm tổng quát để extract structured info từ text bằng AWS Bedrock.\n",
+    "    \n",
+    "    Args:\n",
+    "        raw_txt (str): Văn bản đầu vào (CV, Job Description, v.v.)\n",
+    "        prompt_template (str): Prompt template của CV hoặc Job Description\n",
+    "        model_arn (str): ARN của inference profile hoặc modelId Bedrock\n",
+    "        region_name (str): Vùng AWS nơi Bedrock được triển khai\n",
+    "    \"\"\"\n",
+    "    if model_arn is None:\n",
+    "        return {\"error\": \"Model ARN is required\"}\n",
+    "\n",
+    "    #  thêm raw text vào prompt\n",
+    "    prompt = prompt_template + \"\\n\" + raw_txt\n",
+    "\n",
+    "    client = boto3.client('bedrock-runtime', region_name=region_name)\n",
+    "\n",
+    "    try:\n",
+    "        response = client.converse(\n",
+    "            modelId=model_arn,\n",
+    "            messages=[{\"role\": \"user\", \"content\": [{\"text\": prompt}]}],\n",
+    "            inferenceConfig={\"maxTokens\": 2000, \"temperature\": 0.1, \"topP\": 0.9}\n",
+    "        )\n",
+    "\n",
+    "        # Lấy response text\n",
+    "        response_text = response[\"output\"][\"message\"][\"content\"][0][\"text\"].strip()\n",
+    "\n",
+    "        # Clean markdown\n",
+    "        if response_text.startswith(\"```json\"):\n",
+    "            response_text = response_text.replace(\"```json\", \"\").strip()\n",
+    "        if response_text.endswith(\"```\"):\n",
+    "            response_text = response_text.rstrip(\"```\").strip()\n",
+    "\n",
+    "        # Parse JSON\n",
+    "        try:\n",
+    "            extracted_json = json.loads(response_text)\n",
+    "        except json.JSONDecodeError:\n",
+    "            extracted_json = {\"error\": \"Failed to parse JSON\", \"raw_output\": response_text}\n",
+    "\n",
+    "        return extracted_json\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        return {\"error\": f\"Bedrock invocation failed: {str(e)}\"}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [],
+   "source": [
+    "def translate_with_bedrock(raw_txt, model_arn=None, region_name='ap-southeast-1'):\n",
+    "    \"\"\"\n",
+    "    Hàm dịch văn bản sang tiếng Anh bằng AWS Bedrock.\n",
+    "    \n",
+    "    Args:\n",
+    "        raw_txt (str): Văn bản đầu vào cần dịch\n",
+    "        model_arn (str): ARN của inference profile hoặc modelId Bedrock\n",
+    "        region_name (str): Vùng AWS nơi Bedrock được triển khai\n",
+    "    \"\"\"\n",
+    "    if model_arn is None:\n",
+    "        return {\"error\": \"Model ARN is required\"}\n",
+    "\n",
+    "    prompt = f'''\n",
+    "    Translate the following text to English:\\n{raw_txt}\\n\n",
+    "    Do not make up any information.\n",
+    "    '''\n",
+    "\n",
+    "    client = boto3.client('bedrock-runtime', region_name=region_name)\n",
+    "\n",
+    "    try:\n",
+    "        response = client.converse(\n",
+    "            modelId=model_arn,\n",
+    "            messages=[{\"role\": \"user\", \"content\": [{\"text\": prompt}]}],\n",
+    "            inferenceConfig={\"maxTokens\": 2000, \"temperature\": 0.1, \"topP\": 0.9}\n",
+    "        )\n",
+    "        \n",
+    "        response_text = response[\"output\"][\"message\"][\"content\"][0][\"text\"].strip()\n",
+    "        return response_text\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        return {\"error\": f\"Bedrock invocation failed: {str(e)}\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [],
+   "source": [
+    "def detect_and_translate(raw_txt, model_arn, region_name='ap-southeast-1'):\n",
+    "    try:\n",
+    "        lang = detect(raw_txt)\n",
+    "        if lang != 'en':\n",
+    "            translation_res = translate_with_bedrock(raw_txt, model_arn=model_arn, region_name=region_name)\n",
+    "            return translation_res\n",
+    "        return raw_txt  \n",
+    "    except LangDetectException:\n",
+    "        return raw_txt  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [],
+   "source": [
+    "model_arn = \"arn:aws:bedrock:ap-southeast-1:677020944766:inference-profile/apac.amazon.nova-lite-v1:0\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {
     "metadata": {}
    },
@@ -271,32 +304,15 @@
    "source": [
     "cv_path = \"../data/cv/test.jpg\"\n",
     "ocr_langs = ['en']\n",
-    "raw_txt = ocr_doc(cv_path)"
+    "cv_txt = ocr_doc(cv_path)\n",
+    "cv_info = extract_info_with_bedrock(cv_txt, cv_prompt_template, model_arn=model_arn, region_name='ap-southeast-1')\n",
+    "with open(\"cv_info.json\", \"w\") as f:\n",
+    "    json.dump(cv_info, f, indent=4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "metadata": {
-    "metadata": {}
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'full_name': 'Remy Bertrand', 'email_address': 'JosephFavreau@gmail.com', 'phone_number': '0485435365', 'location': '15, boulevard Admiral Courbet, 69600 OULUNS, Country', 'summary': 'Dynamic manager with more than X years experience in sales and business development, negotiation, account management. Proven ability to achieve sales targets and significantly increase revenue. Results-oriented, motivated, and focused on customer satisfaction.', 'linkedin_profile': 'Not Available', 'github_profile': 'Not Available', 'portfolio_website': 'Not Available', 'skills': ['Sales management', 'Business development', 'Commercial negotiating', 'Account management', 'Customer service', 'Market analysis', 'Sales forecasting', 'Contract negotiation', 'Team leadership', 'Sales reporting', 'Performance analysis'], 'work_experience': [{'job_title': 'Sales Manager', 'company': 'Company ABC', 'duration': 'January 20XX - present', 'description': 'Lead team of X sales reps, develop and implement sales strategies, meet and exceed monthly and annual sales targets, build strong relationships with existing customers and key accounts, negotiate contracts and agreements with clients, prepare sales reports, perform analysis.'}, {'job_title': 'Sales Representative', 'company': 'Company XYZ', 'duration': 'January 20XX - December 20XX', 'description': 'Manage portfolio of clients and develop new business relationships, present products and services to potential customers, negotiate terms of sale and conclude contracts successfully, collaborate with internal teams to ensure customer satisfaction and resolve any issues, achieve and exceed assigned sales targets.'}, {'job_title': 'Sales Representative', 'company': 'Company XYZ', 'duration': 'January 20XX - December 20XX', 'description': 'Manage portfolio of clients and develop new business relationships, present products and services to potential customers, negotiate terms of sale and conclude contracts successfully, collaborate with internal teams to ensure customer satisfaction and resolve any issues, achieve and exceed assigned sales targets.'}], 'education': [{'degree': 'Bachelor in Business Administration', 'institution': 'XYZ University', 'graduation_year': 'Year'}], 'certifications': ['Not Available'], 'languages': ['French', 'English (Level B2)'], 'projects': ['Not Available'], 'references': ['Not Available']}\n"
-     ]
-    }
-   ],
-   "source": [
-    "res = extract_cv_info_with_bedrock(raw_txt)\n",
-    "print(res)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 20,
    "metadata": {
     "metadata": {}
    },
@@ -308,73 +324,14 @@
       "/Users/phucnguyen/miniconda3/lib/python3.13/site-packages/torch/utils/data/dataloader.py:684: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, then device pinned memory won't be used.\n",
       "  warnings.warn(warn_msg)\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample Job Description\n",
-      "Job Title:\n",
-      "Human Resources Assistant\n",
-      "Job Description:\n",
-      "This position reports to the Human Resources (HR) director and\n",
-      "interfaces with company managers and HR staff: Company XYZ is\n",
-      "committed to an employee-orientated, high performance culture that\n",
-      "emphasizes empowerment; quality, continuous improvement, and the\n",
-      "recruitment and ongoing development of a superior workforce.\n",
-      "The intern will gain exposure\n",
-      "to these functional areas:\n",
-      "HR Information Systems; Employee relations; Training and development;\n",
-      "Benefits; Compensation; Organization development; Employment\n",
-      "Specific responsibilities:\n",
-      "Employee orientation and training logistics and recordkeeping\n",
-      "Company-wide committee facilitation and participation\n",
-      "Employee safety, welfare, wellness and health reporting\n",
-      "Provide direct support to employees during implementation of HR\n",
-      "services, policies and programs\n",
-      "What skills will the\n",
-      "intern learn:\n",
-      "Active participation in strategic planning process, including\n",
-      "developing goals, objectives and processes\n",
-      "How to engage professionally in HR meetings and seminars with\n",
-      "other HR professionals in the region\n",
-      "Gain experience with Human Resources Information system\n",
-      "HRIS)\n",
-      "database management and record keeping\n",
-      "Application of HR law and compliance with governmental regulations\n",
-      "Qualifications:\n",
-      "Proficient with Microsoft Word and Excel\n",
-      "General knowledge of employment law and practices\n",
-      "Able to maintain a high level of confidentiality\n",
-      "Effective oral and written management communication skills\n"
-     ]
     }
    ],
    "source": [
     "jd_path = \"../data/cv/sample-job-description.pdf\"\n",
-    "ocr_langs = ['en']\n",
-    "raw_txt = ocr_doc(jd_path)\n",
-    "print(raw_txt.strip())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 129,
-   "metadata": {
-    "metadata": {}
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'job_title': 'Human Resources Assistant', 'company_name': 'Company XYZ', 'location': 'Not Available', 'job_type': 'Not Available', 'salary_range': 'Not Available', 'company_website': 'Not Available', 'posting_date': 'Not Available', 'contact_information': 'Not Available', 'responsibilities': ['Employee orientation and training logistics and recordkeeping', 'Company-wide committee facilitation and participation', 'Employee safety, welfare, wellness and health reporting', 'Provide direct support to employees during implementation of HR services, policies and programs'], 'requirements': ['Proficient with Microsoft Word and Excel', 'General knowledge of employment law and practices', 'Able to maintain a high level of confidentiality', 'Effective oral and written management communication skills'], 'benefits': ['Not Available'], 'application_instructions': 'Not Available', 'required_certifications': ['Not Available'], 'preferred_languages': ['Not Available']}\n"
-     ]
-    }
-   ],
-   "source": [
-    "res = extract_job_desc_info_with_bedrock(raw_txt)\n",
-    "print(res)"
+    "jd_text = ocr_doc(jd_path)\n",
+    "jd_info = extract_info_with_bedrock(jd_text, job_prompt_template, model_arn=model_arn)\n",
+    "with open(\"jd_info.json\", \"w\") as f:\n",
+    "    json.dump(jd_info, f, indent=4)"
    ]
   }
  ],
